# walden

./: .gitignore  Makefile  README.md  pyproject.toml  schema.json
.github/workflows/: auto-update-etl.yml  python-package.yml
index/: schema.json  wpp_demographic.json
ingests/: cait_ghg_emissions.meta.yml  cait_ghg_emissions.py  eia_international_energy_data.py  european_electricity_review.py  faostat.py  ggdc_maddison.annotation.yml  ggdc_maddison.meta.yml  ggdc_maddison.py  ggdc_maddison_project_database.py  global_electricity_review.py  ihme_child_mortality.meta.yml  ihme_child_mortality.py  ihme_gbd.py  postnatal_care.meta.yml  postnatal_care.py  shift.meta.yml  shift.py  un_sdg.meta.yml  un_sdg.py  un_wpp.meta.yml  un_wpp.py  wb_income_groups.py  who_ghe.meta.yml  who_ghe.py  who_vaccination.meta.yml  worldbank_wdi.py
ingests/andrew/: co2_mitigation_curves_1p5celsius.py  co2_mitigation_curves_2celsius.py
ingests/irena/: renewable_power_generation_costs.py
ingests/rff/: emissions_weighted_carbon_price__coverage.py  emissions_weighted_carbon_price__economy.py  emissions_weighted_carbon_price__sectors.py  shared.py  world_carbon_pricing.meta.yml  world_carbon_pricing.py  world_carbon_pricing__sources.py  world_carbon_pricing__subnational.py  world_carbon_pricing_sources.meta.yml  world_carbon_pricing_sources.py
ingests/smil/: global_primary_energy.meta.yml  global_primary_energy.py
ingests/uk_beis/: uk_historical_electricity.py
src/: audit.py  catalog.py  fetch.py  format_json.py  test_catalog.py  utils.py
tests/: test_catalog.py  test_files.py
(+3631 files in other folders)
