[tool.poetry]
name = "walden"
version = "0.1.0"
description = ""
authors = ["Lars Yencken <lars@ourworldindata.org>"]
packages = [{ include = "owid" }]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"
click = "^8.0.1"
sh = "^1.14.2"
boto3 = "^1.17.112"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.4"
watchdog = "^2.1.3"
PyYAML = "^5.4.1"
argh = "^0.26.2"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
